FIX: fixed overflow on mobile devices due to the animation on heritage page

--- a/styles/Heritage.module.scss
+++ b/styles/Heritage.module.scss
@@ -1,10 +1,6 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem calc((100vw - 1000px) / 2);
+  margin: 0;
+  padding: 0%;
+  box-sizing: border-box;
   background-color: #f2f2f2;
-
-  @media screen and (max-width: 999px) {
-    padding: 0.5rem 1rem;
-  }
 }
