--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,3 +26,7 @@ body {
     padding: 0;
   }
 }
+
+.vertical-timeline-element {
+  overflow: hidden;
+}
